<resources>
    <string name="app_name">AASMM</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_post">Text</string>
    <string name="ChoosePostType">Choose Post Type</string>
    <string name="newPostQuote">New Post Quote Button</string>
    <string name="new_post">Write New Post</string>
    <string name="write_you_re_new_post_hint">Write you\'re new post</string>
    <string name="create_new_post_text_view">Share A New link</string>
    <string name="post_button">post</string>
    <string name="write_new_post">Write What Is On Your Mind</string>
    <string name="sm_title">sm_title</string>
    <string name="social_media_icon">Social media icon</string>
    <string name="facebook_app_id">182214706151789</string>
    <string name="fb_login_protocol_scheme">fb182214706151789</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="main_landing">Main Landing Activity</string>
    <string name="sign_up_message">Sign Up? Your email or password was not found.</string>
    <string name="yes_sign_up">Sign Up</string>
    <string name="cancel_sign_up">Cancel</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="title_activity_app_settings">AppSettings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="facebook_share">Share</string>
    <string name="share_link">Share Link</string>
    <string name="faceboo_sign_in">Faceboo:Sign in</string>
    <string name="facebook_images">Facebook images</string>
    <string name="facebook_title_card">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="sign_in_to_account">Sign In To Account</string>
    <string name="twitter">Twitter</string>
    <string name="message_loged_in">Logged In</string>
    <string name="posts">Posts</string>
    <string name="text">Text</string>
    <string name="image">image</string>
    <string name="event">event</string>
    <string name="log_in">Log in to Account</string>
    <string name="manage">Manage</string>
    <string name="logout_of_aasmm">Logout Of AASMM</string>
    <string name="orMessage">or</string>
    <string name="choose_an_image">Choose Image</string>
    <string name="share">Share</string>
    <string name="give_meaning_to_the_image">Write A Meaningful Caption</string>
    <string name="post">Post</string>
    <string name="sign_in_to_a_account">Sign In To A Account</string>
    <string name="add_first_account">Add Your First Account</string>
</resources>
